Sql replacement now uses map instead of flat list and performs basic...